src/test/resources/private/typechecking/pass/method_invocation/method_params_09.jova
class Main2 {
   private int testing(int x) {
        return 0;
   }

  public int main22() {
    int test;

    return testing(testing(testing(testing(testing(testing(testing(0)))))));
  }
}