src/test/resources/private/typechecking/fail/constructor/fail02.jova
class Helper {
}

class Test {
    public int func() {
        Helper a;
        a = new Helper();

        return 0;
    }
}